--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="booyah-box move-history">
-        <p> Possible list of last X moves </p>
+       <%= "#{location.white} / #{location.black}" %>
       </div>
     </div>
 
