--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -117,7 +117,10 @@
   margin-left: auto;
   margin-right: auto;
   padding: 30px;
+}
 
+.game-count {
+  margin-bottom: 20px;
 }
 
 .help-block {
@@ -169,6 +172,10 @@ label.control-label.string.optional {
   flex-wrap: wrap;
   padding: 15px;
   justify-content: center;
+}
+
+.member-since {
+  margin-top: 30px;
 }
 
 .navbar {
@@ -316,18 +323,7 @@ ul {
   .tools {
     display: none;
   }
-}
-
-.game-list {
-  text-align: left;
-  margin-top: 1em;
-  display: inline;
-}
-
-.game-list li {
-  display: inline;
-  float: left;
-  padding-bottom: 5px;
-
-
+  .username {
+    font-size: 20px;
+  }
 }
