styled user dashboard

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="booyah-box col-10 offset-1">
     <br />
     <div class="row">
-      <div class="col-4">
+      <div class="avatar col-4">
         <%= image_tag 'user.png' %>
       </div>
       <div class="col-8">
