--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -300,6 +300,9 @@ ul {
 }
 
 @media (max-width: 600px) {
+  .avatar {
+    max-width: 25%;
+  }
   .btn-warning {
     margin: 15px auto;
     font-size: 25px;
@@ -308,6 +311,9 @@ ul {
   .col-6 {
     max-width: 75%
   }
+  .game-count {
+    font-size: 20px;
+  }
   input.player-button {
     margin: 0px 65px;
   }
@@ -315,6 +321,9 @@ ul {
     font-size: 40px;
     line-height: .7em;
     margin-top: 20px;
+  }
+  .member-since {
+    font-size: 20px;
   }
   .offset-3 {
     margin-left: auto;
