--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,5 @@
 <div class="background">
-  <div class="row">
+  <div class="entire-screen row">
     <div class="column leftside">
       <div class="booyah-box chatbox">
         <% @messages.each do |message| %>
