--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="booyah-box move-history">
-        <p> <%= "#{move.location.white} / #{move.location.black}" %> </p>
+        <p> <%= "#{@whitemove} / #{@blackmove}" %> </p>
       </div>
     </div>
 
