--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,7 @@
 <div class="background">
-  <div class="entire-screen row">
+  <div class= "row">
     <div class="column leftside">
-      <div class="booyah-box chatbox">
+      <div class="booyah-box chatbox column">
         <% @messages.each do |message| %>
           <div class = "message-box">
             <!-- NOTE: For now, I've left out the user email, as I can't think how to get this from Firebase. Would have to store everything on firebase -->
