Added Mike's profile

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,19 +11,19 @@
 
     <div class="row feature">
       <div class="col-12 col-sm">
-        <%= image_tag 'male.jpg', class: 'img-fluid about-image' %>
+        <%= image_tag 'mike.png', class: 'img-fluid about-image' %>
         <br />
         <p class="about-names">Mike Dunnett-Stone</p>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id. </p>
+        Mike is the founder of <%= link_to 'Seed Music', 'www.seedmusic.co.uk' %>, a social enterprise that provides music practice rooms for offices. Previously, he was a senior strategy consultant and holds a starred 1st in Politics, Philosophy and Economics (PPE). He can often be found floundering at the piano.</p>
         <div class="text-center">
-          <%= link_to 'http://github.com/denisekelsey' do %>
+          <%= link_to 'https://github.com/mdunnettstone' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
           <% end %> 
-          <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
+          <%= link_to 'https://www.facebook.com/mike.dunnettstone' do %>
           <span class="fa fa-facebook-square fa-2x social-button"></span>
           <% end %>
-          <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+          <%= link_to 'https://www.linkedin.com/in/mdunnettstone/' do %>
           <span class="fa fa-linkedin-square fa-2x social-button"></span>
           <% end %>
         </div>
