--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,11 +4,11 @@
   <br />
   <div class="frosty col-8 offset-2 text-center">
      <div class="row landing-buttons">
-        <%= link_to 'QuickJoin','#' , class: 'btn btn-warning' %>
+        <%= link_to 'QuickJoin', new_game_path, class: 'btn btn-warning' %>
         <br />
         <%= link_to 'Create A New Game', new_game_path, class: 'btn btn-warning' %>
         <br />
-        <%= link_to 'Join A Game', '#', class: 'btn btn-warning' %>
+        <%= link_to 'Join A Game', new_game_path, class: 'btn btn-warning' %>
         <br />
     </div>
   </div>
