Added Monica pic, description and links to the page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
     <h1 class="text-center" id='about-header'>About Chess Space</h1>
     <br />
     <p class="col-8 offset-2 text-center">
-      Chess Space is a fully functional chess application created by Team Awesome! for <a target="_blank" href="http://www.thefirehoseproject.com/">The Firehose Project's</a> full-stack development curriculum by these Awesome! developers: 
+      Chess Space is a fully functional chess application created by Team Awesome! for <a target="_blank" href="http://www.thefirehoseproject.com/">The Firehose Project's</a> full-stack development curriculum by these Awesome! developers:
     </p>
     <br />
 
@@ -19,7 +19,7 @@
         <div class="text-center">
           <%= link_to 'https://github.com/mdunnettstone' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
-          <% end %> 
+          <% end %>
           <%= link_to 'https://www.facebook.com/mike.dunnettstone' do %>
           <span class="fa fa-facebook-square fa-2x social-button"></span>
           <% end %>
@@ -40,7 +40,7 @@
         <div class="text-center">
           <%= link_to 'http://github.com/denisekelsey' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
-          <% end %> 
+          <% end %>
           <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
           <span class="fa fa-facebook-square fa-2x social-button"></span>
           <% end %>
@@ -61,7 +61,7 @@
         <div class="text-center">
           <%= link_to 'http://github.com/denisekelsey' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
-          <% end %> 
+          <% end %>
           <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
           <span class="fa fa-facebook-square fa-2x social-button"></span>
           <% end %>
@@ -74,19 +74,16 @@
       </div>
 
       <div class="col-12 col-sm">
-        <%= image_tag 'female.png', class: 'img-fluid about-image' %>
+        <%= image_tag 'monica.jpg', class: 'img-fluid about-image' %>
         <br />
-        <p class="about-names">Monica Sira</p>
+        <p class="about-names">Monica Sirathanarun</p>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id. </p>
+        Software developer with an interest in backend logic and infrastructure. Interested in how two logical human beings can end up holding opposite beliefs. Excited about progress, discovery, and being a part of it. </p>
         <div class="text-center">
-          <%= link_to 'http://github.com/denisekelsey' do %>
+          <%= link_to 'http://github.com/bellvat' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
-          <% end %> 
-          <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
-          <span class="fa fa-facebook-square fa-2x social-button"></span>
           <% end %>
-          <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+          <%= link_to 'https://www.linkedin.com/in/monica-sirathanarun-a530688b/' do %>
           <span class="fa fa-linkedin-square fa-2x social-button"></span>
           <% end %>
         </div>
@@ -112,5 +109,5 @@
        <br />
   </div>
 
-  <br />      
+  <br />
 </div>
