--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -53,19 +53,16 @@
       </div>
 
       <div class="col-12 col-sm">
-        <%= image_tag 'female.png', class: 'img-fluid about-image' %>
+        <%= image_tag 'TScheitle1.jpg', class: 'img-fluid about-image' %>
         <br />
         <p class="about-names">Tristen Scheitle</p>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id. </p>
+        Tristen is a teacher-turned-techie with a passion for the intentional use of technology in education. Her dream is to build meaningful experiential learning tools for students, and systems to assist teachers in their practice and help them better prepare young populations for responsible digital citizenship. Educational technology allows an infinite number of learning experiences to be accessible for those students who may not have access otherwise. She also loves her cat and naps on the beach. </p>
         <div class="text-center">
-          <%= link_to 'http://github.com/denisekelsey' do %>
+          <%= link_to 'http://github.com/tscheitle' do %>
           <span class="fa fa-github-square fa-2x social-button"></span>
           <% end %>
-          <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
-          <span class="fa fa-facebook-square fa-2x social-button"></span>
-          <% end %>
-          <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+          <%= link_to 'www.linkedin.com/in/tristen-scheitle-5046b9120/' do %>
           <span class="fa fa-linkedin-square fa-2x social-button"></span>
           <% end %>
         </div>
