--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
         <p class="alert alert-danger"><%= alert %></p>
       <% end %>
 
+      <div id = "result">
+      </div>
+
       <%= yield %>
     </div>
 
