--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -163,8 +163,8 @@
           error:  function(xhr){
             var errorMessage = $.parseJSON(xhr.responseText).message
             var alertClass = $.parseJSON(xhr.responseText).class
-            $("#result").addClass(alertClass)
-            $("#result").html('<p>'+ errorMessage + '</p>')
+            $("#alert_msg").addClass(alertClass)
+            $("#alert_msg").html('<p>'+ errorMessage + '</p>')
           },
           success: function(){
             $newDroppableSquare.append($(ui.draggable));
