--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
         <p class="alert alert-danger"><%= alert %></p>
       <% end %>
 
-      <div id = "result">
+      <div id = "alert_msg">
       </div>
 
       <%= yield %>
