fixed problem with index

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -246,6 +246,10 @@ label.control-label.string.optional {
   min-width: 800px;
 }
 
+.spacing {
+  width: 100%;
+}
+
 .turn {
   margin: 3px auto;
   justify-content: space-around;
