fixed issue with pick color

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -317,6 +317,9 @@ ul {
     margin-left: auto;
     margin-right: auto;
   }
+  .pick-color {
+   display: block;
+  }
   .section {
     margin-left: auto;
     margin-right: auto;
@@ -364,6 +367,9 @@ ul {
   .offset-3 {
     margin-left: auto;
     margin-right: auto;
+  }
+  .pick-color {
+   display: block;
   }
   .section {
     min-width: 350px;
