--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,7 +8,7 @@
       <div class = "row">
         <div class = "xyz text-center">
           <h5>I would like to be...</h5>
-          <div class="row">
+          <div class="row pick-color">
             <%= simple_form_for @game do |f| %>
               <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
               <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
