--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -77,15 +77,15 @@
 
   <% @pieces.each do |piece| %>
     <% if piece.type == "Pawn" && piece.pawn_promotion? && current_user.id == piece.user_id %>
-      <!-- Modal -->
-      <div class="modal fade show" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <!-- Pawn Promotion Modal -->
+      <div class="modal fade show" id="promotionModal" tabindex="-1" role="dialog" aria-labelledby="promotionModalLabel">
         <div class="modal-dialog text-center" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">×</span>
               </button>
-              <h3 class="modal-title text-center" id="myModalLabel"><%= piece.name %>, you've Been Promoted!</h3>
+              <h3 class="modal-title text-center" id="promotionModalLabel">You've Been Promoted!</h3>
             </div>
             <div class="modal-body">
               <h5 class="text-center"> Choose the piece to be promoted to: </h5>
@@ -109,6 +109,30 @@
         </div>
       </div>
     <% end %>
+  <% end %>
+
+  <% if @game.winner_user_id.present? %>
+    <!-- Game End Modal -->
+    <div class="modal fade show" id="gameEndModal" tabindex="-1" role="dialog" aria-labelledby="gameEndModalLabel">
+      <div class="modal-dialog text-center" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h3 class="modal-title text-center" id="gameEndModalLabel"><%= @game.winner_user_id %> has won the game!</h3>
+          </div>
+          <br />
+          <hr />
+          <div class="modal-body">
+            <div class="modal-footer">
+            <button type="button" class="float-right btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= link_to 'Okay', games_path, :class => 'btn btn-inverse' %>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
 
