--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -75,46 +75,38 @@
     </div>
   </div>
 
-  <% @pieces.each do |piece| %>
-    <% if piece.type == "Pawn" && piece.pawn_promotion? && current_user.id == piece.user_id %>
-      <script> $('#myModal').modal('show');</script>
-    <%end%>
-  <%end%>
-      <!-- Pawn Promotion Modal -->
-      <div class="modal fade show" id="promotionModal" tabindex="-1" role="dialog" aria-labelledby="promotionModalLabel">
-        <div class="modal-dialog text-center" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-              <h3 class="modal-title text-center" id="promotionModalLabel">You've Been Promoted!</h3>
-            </div>
-            <div class="modal-body">
-              <h5 class="text-center"> Choose the piece to be promoted to: </h5>
-              <br />
-              <div class="row text-center">
-              <%= link_to piece_path(piece, piece: {type: "Queen"}), method: :put, async: true do %>
-                <%= image_tag "Queen_black.png", class: "player-button", id: "closing"%>
-              <% end %>
-              <%= link_to piece_path(piece, piece: {type: "Bishop"}), method: :put, async: true do %>
-                <%= image_tag "Bishop_black.png", class: "player-button" %>
-              <% end %>
-              <%= link_to piece_path(piece, piece: {type: "Knight"}), method: :put, async: true do %>
-                <%= image_tag "Knight_black.png", class: "player-button" %>
-              <% end %>
-              <%= link_to piece_path(piece, piece: {type: "Rook"}), method: :put, async: true do %>
-                <%= image_tag "Rook_black.png", class: "player-button" %>
-              <% end %>
-            </div>
-            </div>
-          </div>
+  <!-- Pawn Promotion Modal -->
+  <div class="modal" id="promotionModal" tabindex="-1" role="dialog" aria-labelledby="promotionModalLabel">
+    <div class="modal-dialog text-center" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h3 class="modal-title text-center" id="promotionModalLabel">You've Been Promoted!</h3>
+        </div>
+        <div class="modal-body">
+          <h5 class="text-center"> Choose the piece to be promoted to: </h5>
+          <br />
+          <div class="row text-center">
+          <%= link_to piece_path(piece: {type: "Queen"}), method: :put, async: true do %>
+            <%= image_tag "Queen_black.png", class: "player-button", id: "closing"%>
+          <% end %>
+          <%= link_to piece_path(piece: {type: "Bishop"}), method: :put, async: true do %>
+            <%= image_tag "Bishop_black.png", class: "player-button" %>
+          <% end %>
+          <%= link_to piece_path(piece: {type: "Knight"}), method: :put, async: true do %>
+            <%= image_tag "Knight_black.png", class: "player-button" %>
+          <% end %>
+          <%= link_to piece_path(piece: {type: "Rook"}), method: :put, async: true do %>
+            <%= image_tag "Rook_black.png", class: "player-button" %>
+          <% end %>
+        </div>
         </div>
       </div>
-    <% end %>
-  <% end %>
+    </div>
+  </div>
 
-<% if @game.winner_user_id.present? %>
     <!-- Game End Modal -->
     <div class="modal fade show" id="gameEndModal" tabindex="-1" role="dialog" aria-labelledby="gameEndModalLabel">
       <div class="modal-dialog text-center" role="document">
@@ -136,8 +128,19 @@
         </div>
       </div>
     </div>
-  <% end %>
 </div>
+
+<% @pieces.each do |piece| %>
+  <% if piece.type == "Pawn" && piece.pawn_promotion? && current_user.id == piece.user_id %>
+    <script> $('#promotionModal').modal('show');</script>
+  <%end%>
+<%end%>
+
+<% if @game.winner_user_id.present? %>
+ <script> $('#gameEndModal').modal('show');</script>
+<% end %>
+
+
 
 <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 <script>
