--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -243,7 +243,7 @@
             $("#alert_msg").addClass(alertClass)
             $("#alert_msg").html('<p>'+ errorMessage + '</p>')
           },
-          success: function(xhr){
+          success: function(){
             $newDroppableSquare.append($(ui.draggable));
           }
         });
