--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="background">
+  <br />    
+    <div class="booyah-box col-10 offset-1">
+        <h2>Forgot your password?</h2>
+        <br />
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true %>
+          </div>
+          <br />
+          <div class="form-actions">
+            <%= f.button :submit, "Send me reset password instructions", class: 'btn btn-black' %>
+          </div>
+        <% end %>
+        <br />
+        <%= render "devise/shared/links" %>
+    </div>
+  <br />        
+</div>
